# DevClaw

./: .gitignore  ANALYSIS_AND_GAPS.md  CONTRIBUTING.md  CSA_BENEFITS.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  PYPI_SETUP.md  README.md  SPEED_OPTIMIZATION_STRATEGY.md  csa_profile_1776902135.json  integration_examples.py  integration_guide.md  integration_server.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-pypi.yml  test-pr.yml
benchmarks/: __init__.py  benchmark_csa.py  benchmark_quality.py  honest_benchmark.py  honest_results.json  performance.py  visualizer.py
csa/: __init__.py  profiling.py
csa/attention/: __init__.py  compressed_attention.py  patcher.py
csa/compression/: __init__.py  cache_wrapper.py  dynamic_cache.py  matcher.py  quantizer.py
csa/core/: __init__.py  engine.py  score_extractor.py
csa/quantization/: __init__.py  cache.py  turboquant.py
csa/recovery/: __init__.py  background.py  recovery.py
csa/speculation/: __init__.py  ssd.py
docs/: benchmark_report.md  performance_analysis.md
examples/: __init__.py  basic_usage.py
notebooks/: README.md  colab_advanced_benchmark.ipynb  colab_gpu_benchmark.ipynb  colab_gpu_benchmark_updated.ipynb  create_advanced_colab.py  create_colab_notebook.py  qwen_csa_benchmark.ipynb  qwen_integration_testing.ipynb  requirements.txt
tests/: __init__.py  test_attention.py  test_cache_wrapper.py  test_csa.py  test_csa_comprehensive.py  test_dynamic_cache.py
tutorials/: getting_started.md
