[project]
name = "csa"
version = "0.1.0"
description = "Compressed Speculative Attention for faster LLM inference"
authors = [{name = "Krishna"}]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate",
    "pyturboquant",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# Git dependencies installed separately