[project]
name = "csa"
version = "0.1.0"
description = "Compressed Speculative Attention for 4-6x faster LLM inference with minimal memory overhead"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Krishna (TheExplorerecho)", email = "krishna@example.com"},
]
maintainers = [
    {name = "Krishna (TheExplorerecho)", email = "krishna@example.com"},
]
keywords = [
    "llm",
    "inference",
    "optimization",
    "compression",
    "quantization",
    "speculative-decoding",
    "attention",
    "transformers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
integrations = [
    "flask",
    "requests",
    "GPUtil",
]

[project.urls]
Homepage = "https://github.com/kishoretvk/DevClaw"
Documentation = "https://github.com/kishoretvk/DevClaw#readme"
Repository = "https://github.com/kishoretvk/DevClaw"
Issues = "https://github.com/kishoretvk/DevClaw/issues"
Changelog = "https://github.com/kishoretvk/DevClaw/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["csa"]